add: feature logout
