# src/server/routes/v1.ts
@@ -5,7 +5,7 @@ import { routingHandler } from "libs/handler";
 import {routing as routingUsers} from "./v1/users";
 
 import * as services from "services/v1";
-import { V1 } from "types/api";
+import { Login } from "types/api";
 import * as validators from "validators/v1";
 
 /**
@@ -16,7 +16,8 @@ export function routing(): express.Router {
 	return express.Router()
 		.use("/users", routingUsers())
 		.get("/hello", routingHandler(getHello))
-		.post("/login", routingHandler(postLogin));
+		.post("/login", routingHandler(postLogin))
+		.post("/logout", routingHandler(postLogout));
 }
 
 /**
@@ -40,9 +41,23 @@ async function getHello(_req: express.Request, res: express.Response): Promise<v
  * @returns void
  */
 async function postLogin(req: express.Request, res: express.Response): Promise<void> {
-	const reqBody: V1.Login.RequestBody = validators.BodyPostLogin(req);
-	const resBody: V1.Login.ResponseBody = await services.postLogin(req, reqBody.email, reqBody.password);
+	const reqBody: Login.Login.RequestBody = validators.BodyPostLogin(req);
+	const resBody: Login.Login.ResponseBody = await services.postLogin(req, reqBody.email, reqBody.password);
 	res
 		.status(201)
 		.send(resBody);
+}
+
+/**
+ * POST /v1/logout
+ * disable cookie to logout
+ * @param req request
+ * @param res response
+ * @returns void
+ */
+async function postLogout(req: express.Request, res: express.Response): Promise<void> {
+	await services.postLogout(req);
+	res
+		.status(200)
+		.send();
 }
